# cjson

./: .gitignore  README.md  __init__.py  pyproject.toml
bench/: bench_monitoring.py  bench_read.py
cjson/: __init__.py  cjsonl.py  codecs.py
tests/: test_cjsonl.py  test_smoke.py
