[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cjson"
version = "0.2.0"
description = "Stdlib-only compact JSON and append-only cjsonl storage"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "cjson maintainers"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

[tool.setuptools]
packages = ["cjson"]
include-package-data = true

[tool.setuptools.package-data]
cjson = ["py.typed"]
